@@ -38,44 +38,47 @@ In this module you will beautify the CDBook-Store web application and add nice p
 ## Webjars is a new way to add Bootstrap
 
 * Delete Bootstrap because it's used with Webjars now `rm src/main/webapp/resources/bootstrap.css`
-* The `org.webjars.bootstrap` jar brings the needed style sheet
+* The `org.webjars.bootstrap` jar in our depedencies (`pom.xml`) brings the needed style sheet
 
 ##  Check the copied book pages
 
-* The `index.xhtml` page uses the `bookService.findAllImages()` method
-* The `navigation.xhtml` page uses the `categoryService.listAll()` method
-* The `viewPerCategory.xhtml` needs a `bookBean.findByCategory` method
+* The `book/index.xhtml` page uses the `bookService.findAllImages()` method
+* The `book/navigation.xhtml` page uses the `categoryService.listAll()` method
+* The `book/viewPerCategory.xhtml` needs a `bookBean.findByCategory` method
 * The pages use a few Prime Faces components : `imageSwitch` and `dataScroller` 
-
 * Remember that the `@Named` annotation allows a service to be used within a JSF page
 
-## Execute the tests in a remote environment
+## Build the application
+
+* Use Maven and build the application with `mvn clean install`
+
+## Deploy the application on WildFly application server
 
 * Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
+* Make sure WildFly has enough memory `-Xms64m -Xmx1024m -XX:MaxPermSize=512m -Djava.net.preferIPv4Stack=true`
+* JBoss Console
+	* Go to the [admin console](http://localhost:9990/)
+	* Deploy the `cdbookstore/target/cdbookstore.war` file in _Runtime -> Manage Deployments -> Add -> Enable_
+* or JBoss CLI
+	* Execute JBoss CLI : `$WILDFLY_HOME/bin/jboss-cli.sh`
+	* Connect to the server by entering : `connect` 
+	* Deploy the war : `deploy cdbookstore/target/cdbookstore.war --force`  
 
-## Build, Deploy and check the web application
+## Check the web application
                  
 * With a browser go to [http://localhost:8080/cdbookstore]()
-* The top link `Book` should be enabled 
+* The top link `Book` should be enabled (but not `CD` yet)
 * [http://localhost:8080/cdbookstore/faces/book/index.xhtml]() give you access to the book pages
 
-# KATA - Web pages to browse Books and CDs
+# KATA - Create web pages to browse CDs
 
 ## Create the JSF pages
 
-* Based on `webapp/book` create a set of pages to browse the CDs
-* The `webapp/cd/index.xhtml` page needs a `cdService.findAllImages()` method
-* The `webapp/cd/navigation.xhtml` page display all the genres and needs a `genreService.listAll()` method
-* The `webapp/cd/view.xhtml` page displays the information for a book
+* Based on `src/main/webapp/book` create a set of pages to browse the CDs
+* The `cd/index.xhtml` page needs a `cdService.findAllImages()` method
+* The `cd/navigation.xhtml` page display all the genres and needs a `genreService.listAll()` method
+* The `cd/view.xhtml` page displays the information for a book
 * The `viewPerGenre.xhtml` page displays the list of CDs per genre and needs a `cdBean.findByGenre` method
-* Get inspiration from `src/main/webapp/book`
-
-
-## Execute the tests in a remote environment
-
-* Start WildFly (`$WILDFLY_HOME/bin/standalone.sh`)
-* `mvn -Parquillian-wildfly-remote test` will execute the tests with WildFly up and running and with the application deployed
 
 ## Build, Deploy and check the web application
                  
